[gd_scene load_steps=8 format=3 uid="uid://5ltrsa0ifrxn"]

[ext_resource type="Script" uid="uid://duryk5im3p3wg" path="res://scenes/UI/terminal/terminal.gd" id="1_a8pav"]
[ext_resource type="Theme" uid="uid://dcttt1jp1y43p" path="res://scenes/UI/terminal/Terminal.tres" id="2_3x43x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3x43x"]
bg_color = Color(0.09803922, 0.09803922, 0.09803922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mgpjt"]
bg_color = Color(0.09803922, 0.09803922, 0.09803922, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3x43x"]

[sub_resource type="ViewportTexture" id="ViewportTexture_3x43x"]
viewport_path = NodePath("SubViewportContainer/SubViewport")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_input"]

[node name="Terminal" type="CanvasLayer"]
script = ExtResource("1_a8pav")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 1900.0
offset_bottom = 1060.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1880, 1040)
render_target_update_mode = 4

[node name="SpecialLabel5" type="RichTextLabel" parent="SubViewportContainer/SubViewport"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 171609.0
offset_bottom = 110314.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(884, 346)
theme = ExtResource("2_3x43x")
theme_override_font_sizes/normal_font_size = 16
theme_override_styles/background = SubResource("StyleBoxFlat_3x43x")

[node name="SpecialLabel4" type="RichTextLabel" parent="SubViewportContainer/SubViewport"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 171609.0
offset_bottom = 110314.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(884, 346)
theme = ExtResource("2_3x43x")
theme_override_font_sizes/normal_font_size = 16
theme_override_styles/background = SubResource("StyleBoxFlat_3x43x")

[node name="SpecialLabel3" type="RichTextLabel" parent="SubViewportContainer/SubViewport"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 171609.0
offset_bottom = 110314.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(884, 346)
theme = ExtResource("2_3x43x")
theme_override_font_sizes/normal_font_size = 16
theme_override_styles/background = SubResource("StyleBoxFlat_3x43x")

[node name="SpecialLabel2" type="RichTextLabel" parent="SubViewportContainer/SubViewport"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 171609.0
offset_bottom = 110314.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(442, 309)
theme = ExtResource("2_3x43x")
theme_override_font_sizes/normal_font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_mgpjt")
theme_override_styles/focus = SubResource("StyleBoxFlat_mgpjt")

[node name="SpecialLabel" type="RichTextLabel" parent="SubViewportContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 171609.0
offset_bottom = 110314.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(884, 346)
theme = ExtResource("2_3x43x")
theme_override_font_sizes/normal_font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_mgpjt")
theme_override_styles/focus = SubResource("StyleBoxFlat_mgpjt")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.099469066, 0.099469066, 0.099469066, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_3x43x")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_3x43x")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="OutputArea" type="RichTextLabel" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_3x43x")
theme_override_colors/default_color = Color(0.85, 0.85, 0.85, 1)
theme_override_colors/font_selected_color = Color(0.85, 0.85, 0.85, 1)
theme_override_colors/selection_color = Color(0.2, 0.2, 0.2, 1)
bbcode_enabled = true
scroll_following = true
context_menu_enabled = true

[node name="InputArea" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Prompt" type="Label" parent="MarginContainer/Panel/VBoxContainer/InputArea"]
layout_mode = 2
theme = ExtResource("2_3x43x")
theme_override_colors/font_color = Color(0.011764706, 0.9411765, 0.9882353, 1)
text = ">"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/Panel/VBoxContainer/InputArea"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_3x43x")
theme_override_colors/font_color = Color(0.85, 0.85, 0.85, 1)
theme_override_colors/font_placeholder_color = Color(0.4, 0.4, 0.4, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_input")
theme_override_styles/focus = SubResource("StyleBoxEmpty_input")
placeholder_text = "Enter command..."
caret_blink = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="White" type="ColorRect" parent="CenterContainer"]
layout_mode = 2
